# theloopbreaker.com

./: .env.example  .gitattributes  .gitignore  .npmrc  .solhint.json  404.html  7_DAY_SPRINT.md  AGENTS.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_FIXES_SUMMARY.md  AUDIT_NOTES.md  AUDIT_RESULTS.md  AUTOMATED_TESTING_REPORT.md  BASE_ECOSYSTEM_GRANT_APPLICATION.md  BASE_MINI_APP_PROFESSIONAL_REVIEW.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_MATH_LOGIC_AUDIT.md  COMPREHENSIVE_PROFESSIONAL_AUDIT.md  COMPREHENSIVE_PROTOCOL_AUDIT_2026.md  COMPREHENSIVE_PROTOCOL_REVIEW_2026.md  CONTRIBUTING.md  CRITICAL_ISSUES.md  CRITICAL_ISSUES_FOUND.md  CRITICAL_MATH_AUDIT_REPORT.md  DEMO_VIDEO_SCRIPT.md  DEMO_ZK_BELIEF.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_FOR_NON_TECHNICAL_FOUNDER.md  DEPLOYMENT_READY.md  DEPLOY_LOCAL.md  DEPLOY_MAINNET_NOW.md  ETHICS.md  EXECUTIVE_SUMMARY.md  FINAL_AUDIT_TRUE_10_OUT_OF_10.md  FINAL_A_PLUS_AUDIT.md  FINAL_COMPREHENSIVE_SECURITY_AUDIT.md  FINAL_READINESS_REPORT.md  (+339 more)
.githooks/: pre-merge
.husky/: pre-commit
404/: index.html
Vaultfire/: CHANGELOG.md  x402_rails.py  x402_receipts.py
__tests__/: auto_refund.test.js  basescan-api.test.ts  drift_anchor_protocol.test.js  erc8004.test.js  ethicsGuard.test.js  fhe_adapter_production.test.js  fhe_setup_wizard.test.js  frontier_upgrade.test.js  ghostkey_ai_trader.test.js  ghostkey_partner_activation.test.js  ghostkey_trader_notifications.test.js  hardhatSandbox.test.js  identityResolver.test.js  log_queue_adapter.test.js  log_queue_streams_backend.test.js  loggingRotation.test.js  mission_gatekeeper.test.js  partnerAlerting.test.js  partner_module_access_layer.test.js  pythonTestUtils.js  relay.test.js  security_monitor.test.js  sentryFallback.test.js  signature_validation_chain.test.js  test_mirrorforge_output_render.js  test_partner_mirrorforge_embed.js  vaultfire_media.test.js  vaultfire_partner_onboard.test.js  vaultfire_syncToASM.test.js  wallet_auth.test.ts  yield_engine_v1.test.js
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
agent/: .env.example  .eslintrc.json  README.md  jest.config.js  package-lock.json  package.json  sentinel.js
app/: globals.css  layout.tsx  page.tsx
assets/: index-2blxXX3a.js  index-Ble8p8cJ.js  index-BrxIGMfh.js  index-C19tpbLl.js  index-CI5EgjZ-.css  index-COdyVyuw.css  index-CRDfizQb.js  index-CVL7Lhy9.css  index-CXGtQrsJ.css  index-CjuNkoDW.js  index-CmENmfbe.css  index-D84urdza.js  index-DFdke31h.js  index-DMmqIEEQ.js  index-Dmabazzy.js  index-p9b0e-Om.js  index-pNRxGulp.js
attestation/: pack_generator.py
attestations/: yield-api-activity.json
auth/: altIdentity.ts  authMiddleware.js  authMiddleware.ts  expressExample.js  refreshStore.js  roles.js  tokenService.js
backups/: last_snapshot.json  state.json
base-mini-app/: .env.example  .gitignore  BASE_PITCH.md  BASE_SHOWCASE_PITCH.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  PRODUCTION_READY.md  PROFESSIONAL_AUDIT_REPORT.md  README.md  hardhat.config.ts  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vercel.json
base-mini-app/zkp/host/: Cargo.toml
base-mini-app/zkp/host/src/: lib.rs
base-mini-app/zkp/methods/guest/: Cargo.toml
base-mini-app/zkp/methods/guest/src/: main.rs
cache/: config.json
charts/: adoption_vs_mission.json
cli/: actions.js  belief-mapper.js  beliefVote.js  deployLive.js  deployVaultfire.js  drift_anchor_verifier.js  freedom_rite.py  governance_spine_cli.py  run_enterprise_integration_tests.py  vaultfire-cli.js
client/: index.html
codex/: VAULTFIRE_CLI_LEDGER.jsonl  VAULTFIRE_STATUS.md  __init__.py  __main__.py  enterprise_sync_validator.py  init.py  laws.yaml  ledger.js  pilot.py
compliance/: attestation_snapshots.json  auto_attestation.py  exportLogs.js
config/: securityConfig.js  trustSyncConfig.js
configs/: golden-environment.json  module_sandbox.json  passive_sync.json  vaultfire_config.json
constants/: oauth.ts
contracts/: AIAccountabilityBonds.sol  AIAccountabilityBondsV2.sol  AIPartnershipBonds.sol  AIPartnershipBondsV2.sol  AntiSurveillance.sol  BaseDignityBond.sol  BaseOracle.sol  BaseYieldPoolBond.sol  BeliefAttestationVerifier.sol  BeliefAttestationVerifierProduction.sol  BeliefOracle.sol  BuilderBeliefBonds.sol  BuilderBeliefBondsV2.sol  CommonGroundBonds.sol  CommonGroundBondsV2.sol  CompetitiveIntegrityBond.sol  ContributorUnlockKey.sol  DEPLOY_NOW.md  DilithiumAttestor.sol  ERC8004IdentityRegistry.sol  ERC8004ReputationRegistry.sol  ERC8004ValidationRegistry.sol  EscapeVelocityBonds.sol  EscapeVelocityBondsV2.sol  FanBeliefBond.sol  FreedomVow.sol  (+25 more)
contracts-draft/: TrustDataBridge.sol  VaultfireBridgeMint.sol
risc0-guest/: Cargo.toml  README.md
risc0-guest/src/: main.rs
risc0-prover/host/: Cargo.toml
risc0-prover/host/src/: main.rs
risc0/boundless-integration/: Cargo.toml
risc0/boundless-integration/src/: local_prover.rs  main.rs
risc0/guest/: Cargo.toml  build.rs
risc0/guest/src/: main.rs
risc0/host/: Cargo.toml  build.rs
risc0/host/src/: main.rs
sdk/: README.md  __init__.py  api-server.ts  index.ts  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  vaultfire.ts
sdk/examples/: defi-trading.ts  governance-dao.ts
sdk/tests/: symbioticForge.test.ts  test_symbiotic_forge.py
sdk/vaultfire_sdk/: __init__.py
(+2218 files in other folders)
