[package]
name = "vaultfire-belief-guest"
version = "1.0.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
