[package]
name = "vaultfire-boundless-integration"
version = "1.0.0"
edition = "2021"
description = "Boundless proving marketplace integration for Vaultfire belief attestation"
license = "MIT"

[workspace]

[dependencies]
# Boundless SDK
boundless-market = "1.2"

# RISC Zero
risc0-zkvm = "1.2"

# Ethereum / Alloy
alloy = { version = "0.8", features = ["full"] }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
risc0-build = "1.2"
