[package]
name = "vaultfire-belief-attestation-guest"
version = "1.0.0"
edition = "2021"
description = "RISC Zero guest program for Vaultfire belief attestation ZK proofs"
license = "MIT"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["guest"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
alloy-primitives = { version = "0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }

[profile.release]
opt-level = 3
lto = true
