[package]
name = "vaultfire-belief-attestation-guest"
version = "1.0.0"
edition = "2021"
description = "RISC Zero guest program for Vaultfire belief attestation ZK proofs"
license = "MIT"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["guest"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
# sha2 is NOT needed as a direct dependency — RISC Zero uses sha256
# internally for journal digest computation. The guest only needs keccak256
# (implemented inline) for belief_hash computation.

[profile.release]
opt-level = 3
lto = true
