[package]
name = "vaultfire-belief-attestation-host"
version = "1.0.0"
edition = "2021"
description = "Host program for Vaultfire belief attestation RISC Zero proof generation"
license = "MIT"

[workspace]

[dependencies]
# RISC Zero
risc0-zkvm = "1.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"

[build-dependencies]
risc0-build = "1.2"

[[bin]]
name = "vaultfire-host"
path = "src/main.rs"
