[package]
name = "vaultfire-zkp-host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true, features = ["prove"] }
serde = { workspace = true }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10"
bincode = "1.3"
vaultfire-methods = { path = "../methods" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
